--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
-app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
+ath_main:
+    resource: "@AthMainBundle/Resources/config/routing.yml"
+    prefix:   /
+
+ath_user:
+    resource: "@AthUserBundle/Resources/config/routing.yml"
+    prefix:   /
