--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,7 +10,7 @@ parameters:
 
 framework:
     #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
+    translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -37,6 +37,7 @@ twig:
     paths:
         "%kernel.root_dir%/Resources/views/Ath/Main": ath_main_path
         "%kernel.root_dir%/Resources/views/Ath/User": ath_user_path
+        "%kernel.root_dir%/Resources/views": ath_views
     form:
         resources: [':Ath/Form:ath_form_page_theme.html.twig']
 
@@ -74,3 +75,15 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: Ath\UserBundle\Entity\User
+    service:
+        mailer: fos_user.mailer.twig_swift
+    registration:
+        form:
+            type: Ath\UserBundle\Form\RegistrationType
+            validation_groups: [AthRegistration]
+
+        confirmation:
+            enabled: true
+    from_email:
+        address:        "%email_from%"
+        sender_name:    Athleteec
