--- a/src/Ath/UserBundle/Resources/config/routing.yml
+++ b/src/Ath/UserBundle/Resources/config/routing.yml
@@ -22,6 +22,12 @@ fos_user_change_password:
    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
    prefix: /profile
 
+fos_user_profile_edit:
+    pattern: /modifier/profil
+    defaults: { _controller: AthUserBundle:Profile:edit }
+    requirements:
+        _method: GET|POST
+
 user_security_login:
     pattern:    /login
     defaults:   { _controller: AthUserBundle:Security:login }
