Add validator post_registration

--- a/src/Ath/UserBundle/Resources/config/services.yml
+++ b/src/Ath/UserBundle/Resources/config/services.yml
@@ -18,3 +18,7 @@ services:
         tags:
             - { name: kernel.event_subscriber }
     
+    ath.user.validator.post_registration_validation:
+        class: Ath\UserBundle\Validator\Constraints\ConditionalValidatorForUser
+        tags:
+            - { name: validator.constraint_validator, alias: post_registration_validation }  
