--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,7 +3,9 @@ security:
         FOS\UserBundle\Model\UserInterface: sha512
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
+        ROLE_USER:
+        ROLE_ASSOC: ROLE_USER
+        ROLE_ADMIN:       ROLE_ASSOC
         ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
