Modification du profil upload de photo + install avalanche

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,3 +5,7 @@ ath_main:
 ath_user:
     resource: "@AthUserBundle/Resources/config/routing.yml"
     prefix:   /
+    
+_imagine:
+    resource: .
+    type:     imagine
