--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -127,3 +127,23 @@ services:
             - { name: doctrine.event_subscriber, connection: default }
         calls:
             - [ setAnnotationReader, [ @annotation_reader ] ]
+
+avalanche_imagine:
+    web_root: %kernel.root_dir%/../web
+    cache_prefix: uploads/avalanche/
+    filters:
+        user_detail:
+            type:    thumbnail
+            options: { size: [124, 124], mode: outbound, quality: 100, format: png }
+        user:
+            type:    thumbnail
+            options: { size: [96, 96], mode: outbound, quality: 100, format: png }
+        user_short:
+            type:    thumbnail
+            options: { size: [48, 48], mode: outbound, quality: 100, format: png }
+        user_mini:
+            type:    thumbnail
+            options: { size: [32, 32], mode: outbound, quality: 100, format: png }
+        user_micro:
+            type:    thumbnail
+            options: { size: [24, 24], mode: outbound, quality: 100, format: png }
