--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -26,8 +26,8 @@ hwi_oauth_redirect:
 facebook_login:
     pattern: /login/check-facebook
  
-# google_login:
-#     pattern: /connect/check-google
+google_login:
+    pattern: /login/check-google
     
-# twitter_login:
-#     pattern: /connect/check-twitter
+twitter_login:
+    pattern: /login/check-twitter
