--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -40,8 +40,8 @@ security:
             oauth:
                 resource_owners:
                     facebook:           "/login/check-facebook"
-                    # google:             "/connect/check-google"
-                    # twitter:            "/connect/check-twitter"
+                    google:             "/login/check-google"
+                    twitter:            "/login/check-twitter"
                 login_path:        /login
                 use_forward:       false
                 failure_path:      /login
@@ -54,6 +54,7 @@ security:
         - { path: ^/_wdt, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/_profiler, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login/check-google$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/connect, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/connect/check-facebook, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
