fix(bower.json): add breakpoint-sass missing lib

--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "js-cookie": ">=2.0.3",
     "font-awesome":"https://github.com/FortAwesome/Font-Awesome.git",
     "bootstrap-sass" : "*",
+    "breakpoint-sass" : "*",
     "bootstrap" : "*"
   }
 }
