--- a/src/Ath/MainBundle/Resources/config/services.yml
+++ b/src/Ath/MainBundle/Resources/config/services.yml
@@ -2,3 +2,8 @@ services:
 #    ath_main.example:
 #        class: Ath\MainBundle\Example
 #        arguments: ["@service_id", "plain_value", %parameter%]
+
+# Service Mailer
+    ath_main.services.send_mail:
+        class: Ath\MainBundle\Services\SendMail
+        arguments: ['@service_container', '@doctrine.orm.entity_manager']
