--- a/src/Ath/UserBundle/Resources/config/services.yml
+++ b/src/Ath/UserBundle/Resources/config/services.yml
@@ -9,7 +9,7 @@ services:
     my_user_provider:
         class: Ath\UserBundle\Security\Core\User\MyOAuthProvider
         #this is the place where the properties are passed to the UserProvider - see config.yml
-        arguments: [@fos_user.user_manager,{facebook: facebookId, google: googleId}, @doctrine.orm.default_entity_manager]
+        arguments: [@fos_user.user_manager,{facebook: facebookId, google: googleId}, @doctrine.orm.default_entity_manager, '@service_container']
 
     # Fosuser registration override
     ath.form.registration:
