--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "gedmo/doctrine-extensions": "v2.4.7",
         "avalanche123/imagine-bundle": "^2.1",
-        "hwi/oauth-bundle": "0.4.*@dev"
+        "hwi/oauth-bundle": "0.4.*@dev",
+        "sonata-project/doctrine-orm-admin-bundle": "^2.3",
+        "knplabs/knp-paginator-bundle": "^2.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
