--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -31,3 +31,12 @@ google_login:
     
 twitter_login:
     pattern: /login/check-twitter
+
+admin:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
