Ajout referer lors de auth, et correction href dans les mails

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -33,8 +33,8 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_provider: form.csrf_provider
-                success_handler: ath_user.login_success_handler
-                always_use_default_target_path: true
+                # success_handler: ath_user.login_success_handler
+                # always_use_default_target_path: true
                 default_target_path: /
                 # failure_path:   null
                 use_referer: true
