Ajout Crud categorie produit

--- a/src/Ath/MainBundle/Resources/config/services.yml
+++ b/src/Ath/MainBundle/Resources/config/services.yml
@@ -27,10 +27,17 @@ services:
         tags:
             - {name: sonata.admin, manager_type: orm, group: Administration, label: Demandes de Célébrité}
 
-#  ----------------------- FIN GESTION ADMIN -------------------------------------------------
+    admin.categorie_produit:
+        class: Ath\MainBundle\Admin\CategorieProduitAdmin
+        arguments: [~, Ath\MainBundle\Entity\CategorieProduit, ~]
+        tags:
+            - {name: sonata.admin, manager_type: orm, group: Administration, label: Catégorie de Produit}
+# ----------------------- FIN GESTION ADMIN -------------------------------------------------
 
 # Widget Form pour les statuts de demande de célébrité
     ath_main.form.type.statuts_demande_celebrite:
         class: Ath\MainBundle\Form\Type\StatutDemandeCelebriteFormType
         tags:
             - { name: form.type, alias: statuts_demande_celebrite_widget }
+
+   
