--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -232,48 +232,48 @@ avalanche_imagine:
     filters:
         user_detail:
             type:    thumbnail
-            options: { size: [124, 124], mode: outbound, quality: 100, format: png }
+            options: { size: [124, 124], mode: outbound, quality: 100, format: [png, jpg]  }
         user:
             type:    thumbnail
-            options: { size: [96, 96], mode: outbound, quality: 100, format: png }
+            options: { size: [96, 96], mode: outbound, quality: 100, format: [png, jpg]  }
         user_short:
             type:    thumbnail
-            options: { size: [48, 48], mode: outbound, quality: 100, format: png }
+            options: { size: [48, 48], mode: outbound, quality: 100, format: [png, jpg]  }
         user_mini:
             type:    thumbnail
-            options: { size: [32, 32], mode: outbound, quality: 100, format: png }
+            options: { size: [32, 32], mode: outbound, quality: 100, format: [png, jpg]  }
         user_micro:
             type:    thumbnail
-            options: { size: [24, 24], mode: outbound, quality: 100, format: png }
+            options: { size: [24, 24], mode: outbound, quality: 100, format: [png, jpg]  }
 
         produit_detail:
             type:    thumbnail
-            options: { size: [124, 124], mode: outbound, quality: 100, format: png }
+            options: { size: [124, 124], mode: outbound, quality: 100, format: [png, jpg]  }
         produit:
             type:    thumbnail
-            options: { size: [96, 96], mode: outbound, quality: 100, format: png }
+            options: { size: [96, 96], mode: outbound, quality: 100, format: [png, jpg]  }
         produit_short:
             type:    thumbnail
-            options: { size: [48, 48], mode: outbound, quality: 100, format: png }
+            options: { size: [48, 48], mode: outbound, quality: 100, format: [png, jpg]  }
         produit_mini:
             type:    thumbnail
-            options: { size: [32, 32], mode: outbound, quality: 100, format: png }
+            options: { size: [32, 32], mode: outbound, quality: 100, format: [png, jpg]  }
         produit_micro:
             type:    thumbnail
-            options: { size: [24, 24], mode: outbound, quality: 100, format: png }
+            options: { size: [24, 24], mode: outbound, quality: 100, format: [png, jpg]  }
 
         post_detail:
             type:    thumbnail
-            options: { size: [124, 124], mode: outbound, quality: 100, format: png }
+            options: { size: [124, 124], mode: outbound, quality: 100, format: [png, jpg]  }
         post:
             type:    thumbnail
-            options: { size: [96, 96], mode: outbound, quality: 100, format: png }
+            options: { size: [96, 96], mode: outbound, quality: 100, format: [png, jpg]  }
         post_short:
             type:    thumbnail
-            options: { size: [48, 48], mode: outbound, quality: 100, format: png }
+            options: { size: [48, 48], mode: outbound, quality: 100, format: [png, jpg]  }
         post_mini:
             type:    thumbnail
-            options: { size: [32, 32], mode: outbound, quality: 100, format: png }
+            options: { size: [32, 32], mode: outbound, quality: 100, format: [png, jpg]  }
         post_micro:
             type:    thumbnail
-            options: { size: [24, 24], mode: outbound, quality: 100, format: png }
+            options: { size: [24, 24], mode: outbound, quality: 100, format: [png, jpg]  }
